feat(US3): submit() human approval gate + real-time market data (T030–T031, T-RT0–T-RT5)
T030 – ExecutionEngine.submit() fully implemented
- SIMULATED status guard (ValueError on wrong state)
- POST /iserver/account/{acctId}/orders with IBKR interactive-reply handling
- 30s polling loop via _poll_order_status()
- Terminal outcomes: FILLED / REJECTED / CANCELLED / PENDING(timeout)
- Order.rejection_reason field added to models/order.py

T031 – 2-step human approval modal in order_builder.py
- _render_approval_section(): read-only order summary expander
- Checkbox authorization gate + red 'CONFIRM & SUBMIT' button
- _render_submission_result() for FILLED/REJECTED/CANCELLED/PENDING display
- Approval state resets after every submission attempt

T-RT1/RT2/RT3 – core/market_data.py (MarketDataService)
- Quote and OptionQuote dataclasses
- resolve_conid() via /iserver/secdef/search
- get_quote() for stocks/ETFs via IBKR snapshot fields 31/84/86
- get_futures_quote() via secdef/search + secdef/info + front-month code
- get_options_chain() via Tastytrade simulate_prefetch → list[OptionQuote]

T-RT4 – Real-time price badge per leg (_render_leg_price)
- 💲 fetch button per leg
- Shows bid / ask / - Shows bid / ask / - Shows bid / ask / - Shows bid / ask / - Shows blable

T-RT5 – Options chain picker per option legT-RT5 – Options chain picker per option legT-RT5 – Options chaina MarketDataService
- Expiry dropdown filter + sortable dataframe
- 'Use This Strike' syncs strike/right/expiry to l- 'Use This Strike' syncs strike/right/expiry to l- 'Use Tts (all pass)
Tests: 56 passed (36 execution + 20 market_data)

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,23 @@
 IBKR_USER=
 IBKR_PASSWORD=
 IBKR_GATEWAY_URL=https://localhost:5001
+IBKR_ACCOUNT_ID=                        # e.g. U1234567 — required for order submission and whatif API
 
-# Tastytrade credentials (preferred: refresh token)
+# Tastytrade credentials (preferred: OAuth refresh token per SDK v12+)
 TASTYTRADE_USERNAME=
 TASTYTRADE_PASSWORD=
 TASTYTRADE_REFRESH_TOKEN=
 TASTYTRADE_REMEMBER_TOKEN=
 TASTYTRADE_2FA_CODE=
+TT_SECRET=                              # Tastytrade provider_secret for Session(provider_secret=..., refresh_token=...)
+TT_REFRESH=                             # Tastytrade refresh_token
+
+# AI / LLM
+COPILOT_TOKEN=                          # GitHub Copilot SDK token (ghp_...) — used by agents/llm_client.py
+
+# Algorithmic execution platform (003-algo-execution-platform)
+SNAPSHOT_INTERVAL_SECONDS=900          # Background portfolio snapshot interval (default: 15 min)
+THETA_BUDGET_PER_SUGGESTION=0          # Max theta cost per AI trade suggestion (0 = unlimited)
 
 # Greeks diagnostics behavior
 GREEKS_DISABLE_CACHE=0
